[build-system]
requires = [
	 "setuptools>=45",
	 "wheel",
	 "scikit-build~=0.15",
	 "cmake",
	 "Cython",
	 "ninja"
]
build-backend = "setuptools.build_meta"
[tool.cibuildwheel]
# Build the versions found in Ubuntu LTS and the stable PyPy
build = ["pp38*", "cp36-*", "cp38-*", "cp310-*"]
# PyPy 3.8 will choke on CPython 3.8 build leftovers...
before-build = "rm -rf _skbuild"
# PyPy builds are broken on Windows, and skip 32-bit and musl
skip = ["*musl*", "*_i686", "*-win32", "pp*win*"]
