[build-system]
requires = [
    "scikit-build-core",
    "Cython",
    "setuptools>=61.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "soundswallower"
dynamic = ["version"]
description = "An even smaller speech recognizer"
readme = "README.md"
authors = [
    {name = "David Huggins-Daines", email = "dhd@ecolingui.ca"}
]
keywords = ["asr", "speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: C",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[project.optional-dependencies]
dev = [
    "mypy==1.13.0",
    "numpy",
    "pre-commit",
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ReadAlongs/SoundSwallower"
Documentation = "https://soundswallower.readthedocs.io/"
Repository = "https://github.com/ReadAlongs/SoundSwallower.git"
Issues = "https://github.com/ReadAlongs/SoundSwallower/issues"

[project.scripts]
soundswallower = "soundswallower.cli:main"

[tool.cibuildwheel]
# Build binaries for supported versions of Python
build = [
    "cp38-*",
    "cp39-*",
    "cp310-*",
    "cp311-*",
    "cp312-*",
    "cp313-*",
]
# Build only universal wheels for Mac where possible, and skip 32-bit
# builds to avoid building a gigabyte of stuff all the time
skip = [
    "cp*-macosx_x86_64",
    "cp*-macosx_arm64",
    "*_i686",
    "*musl*",
    "*-win32",
]

[tool.cibuildwheel.macos]
archs = ["x86_64", "universal2", "arm64"]

[tool.ruff.lint]
select = [
  "B",    # flake8-bugbear
  "BLE",  # flake8-blind-except
  "C4",   # flake8-comprehensions
  "C90",  # mccabe code complexity
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "PL",   # pylint
  "W",    # pycodestyle whitespace
]

[tool.ruff.lint.isort]
known-first-party = ["soundswallower"]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["py/soundswallwer/_version.py"]
cmake.verbose = true
logging.level = "INFO"
wheel.packages = ["py/soundswallower"]

[tool.setuptools_scm]
write_to = "py/soundswallower/_version.py"
