[metadata]
name = soundswallower
version = 0.4.1
description = An even smaller speech recognizer
long_description = file: README.md
long_description_content_type = text/markdown
author = David Huggins-Daines
author_email = dhdaines@gmail.com
license = MIT
platforms = any
url = https://github.com/ReadAlongs/SoundSwallower
project_urls = 
    Documentation = https://soundswallower.readthedocs.io/
    Tracker = https://github.com/ReadAlongs/SoundSwallower/issues
keywords = asr, speech
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: C
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Natural Language :: French
